<resources>
    <string name="app_name">Fittracker</string>
    <string name="greeting">Hello World !!</string>
    <string name="my_health">MyHealth</string>
    <string name="add_exercise">Add Exercise</string>
    <string name="discard_workout">Discard Workout</string>
    <string name="story_posted_successfully">Story posted successfully</string>
    <string name="select_picture">Select picture</string>
    <string name="canceled_text">Canceled</string>
    <string name="cancel_text">Cancel</string>
    <string name="camera_permission_request">Allow camera</string>
    <string name="btn_ok">Okay</string>
    <string name="skip">Skip</string>
    <string name="select_workout">Select workout</string>
    <string name="search_workout">Search workout</string>
    <string name="done">Done</string>
    <string name="finish">Finish</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="confirmation_code">We will send you confirmation code</string>
    <string name="next">Next</string>
    <string name="tnc_text">By continuing, you agree to our &lt;a href=https://myportfolio-6438d.web.app/>Terms of Use and Privacy Policy.&lt;/a></string>
    <string name="otp_text">Enter code sent to your phone</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="change">Change</string>
    <string name="otp_label">Enter the verification code here</string>
    <string name="phone_hint">+91 8763423443</string>
    <string name="network_error">Unable to connect, please check your internet connection</string>
    <string name="retry_text">Retry</string>
    <string name="saturday">S</string>
    <string name="sunday">S</string>
    <string name="monday">M</string>
    <string name="tuesday">T</string>
    <string name="wednesday">W</string>
    <string name="thursday">T</string>
    <string name="friday">F</string>
    <string name="log_workout">Log Workout</string>
    <string name="duration">Duration</string>
    <string name="volume">Volume</string>
    <string name="sets">Sets</string>
    <string name="search_exercise"><font size="14">Search exercise</font></string>
    <string name="exercise_count">%1d Exercise</string>
    <string name="hint_morning_workout"><font size="16">eg: Morning workout</font></string>
    <string name="save">Save</string>
    <string name="routine_title">Routine title</string>
    <string name="routine_substitle">Get started by adding an exercise to your routine.</string>
    <string name="create">Create</string>
    <string name="repeat">Repeat</string>
    <string name="reminder">Reminder</string>
    <string name="set_text">Set</string>
    <string name="weight_hint">Weight(Kg)</string>
    <string name="time_hint">Time</string>
    <string name="day_hint">Day</string>

    <string name="default_notification_channel_id">default</string>
    <string name="activity_running">Running</string>
    <string name="activity_walking">walking</string>
    <string name="activity_cycling">cycling</string>
    <string name="welcome_message">Welcome !!</string>
    <string name="stat_date">%1$s %2$d/%3$d</string>
    <string name="stat_duration">Duration: %1$d min</string>
    <string name="stat_distance">Distance: %1$s km</string>
    <string name="tracking_notification_title">Keep going!</string>

    <!--Widget-->
    <string name="widget_description">This is an app widget that displays user\'s last activity</string>
    <string name="widget_title">Last Activity</string>
    <string name="widget_activity_type">%1$s</string>
    <string name="widqet_distance">Distance: %1$.2f km </string>
    <string name="widget_duration">Duration: %1$d min</string>
    <string name="widget_preview_activity_type">Exercise Type</string>
    <string name="widget_preview_distance">Distance: n/a </string>
    <string name="widget_preview_duration">Duration: n/a </string>
    <string name="widget_no_activity_speech">Couldn\'t find the last activity for %1$s.</string>
    <string name="widget_no_activity_text">No last activity found</string>
    <string name="widget_activity_speech">Your last %1$s activity was on %2$s and it was for %3$d minutes and %4$.2f kilometers.</string>
    <string name="widget_activity_text">Your last %1$s activity was on %2$s.</string>
    <string name="widget_no_data">No activity found</string>
    <string name="stats_title">Way to GO!</string>
    <string name="start_activity_title">Start %1$s in…</string>

    <string name="action_settings">Settings</string>
    <string name="stats_total_distance">%1$d\nMeters</string>
    <string name="stats_total_duration">%1$d\nMinutes</string>
    <string name="stats_total_count">%1$d\nActivities</string>
    <string name="stats_tracking_distance">%1$dm</string>
    <string name="activity_unknown">Unknown</string>
    <string name="get_started">Get started</string>
    <string name="add_workout_text">Add an exercise to start workout</string>
    <string name="start_routine">Start routine</string>
    <string name="take_photo">Take photo</string>
    <string name="start_capture">Start capture</string>
    <string name="stop_capture">Stop capture</string>
    <string name="dialog_option">%1$dp - %2$s</string>
    <string name="download_start_error">Failed to start download</string>

    <string name="item_download_percentage">Size: %1$s | Progress: %2$d %%</string>
    <string name="exo_download_notification_channel_name">ExoplayerDownload</string>
    <string name="exo_download_queued">Download in queue</string>
    <string name="exo_download_completed">Download completed</string>
    <string name="exo_download_downloading">Downloading…</string>
    <string name="exo_download_failed">Download failed</string>
    <string name="exo_download_stopped">Download stopped</string>
    <string name="exo_download_removing">Download removing</string>
    <string name="exo_download_restarting">Download restarting</string>
    <string name="made_with_love">Made with ❤️ in India</string>
    <string name="log_out">Log out</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="weight">Weight</string>
    <string name="name_empty_msg">Name can\'t be empty</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_age">Enter your age</string>
    <string name="enter_your_weight">Enter your weight</string>
    <string name="edit_txt">Edit</string>
    <string name="phone_number">Phone number</string>
    <string name="quick_start">Quick Start</string>
    <string name="new_workout">New Workout</string>
    <string name="new_routine">New Routine</string>
    <string name="profile_photo">Profile photo</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="my_routine">"My routines(%d)"</string>
    <string name="no_workout_text">You have not added your today\'s workout.</string>
    <string name="workout_title">What are you up to today?</string>
    <string name="this_week">This week</string>
    <string name="this_month">This month</string>
    <string name="this_year">This year</string>

</resources>