<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    app:cardCornerRadius="@dimen/dimen_12dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:padding="@dimen/dimen_16dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/header"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/enter_your_mobile_number"
            android:textAppearance="@style/TextLarge.Medium.Primary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/sub_header"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/confirmation_code"
            android:textAppearance="@style/TextBody.Medium.Tertiary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_phone_number"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:layout_width="@dimen/dimen_0dp"
            app:prefixText="+91 "
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sub_header">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone_number"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:hint="Phone number"
                android:inputType="phone"
                android:maxLength="14" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.aslifitness.fitracker.widgets.FitnessButton
            android:id="@+id/submit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:button_title="@string/next"
            android:layout_marginTop="@dimen/dimen_32dp"
            app:layout_constraintTop_toBottomOf="@+id/et_phone_number" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tnc_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tnc_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/submit_button"
            android:layout_marginTop="@dimen/dimen_16dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>