<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/dimen_16dp">

    <View
        android:id="@+id/top_view"
        android:layout_width="@dimen/dimen_32dp"
        android:layout_height="@dimen/dimen_2dp"
        android:background="@color/color_tertiary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_24dp"
        android:text="@string/profile_photo"
        android:textAppearance="@style/Heading1.Medium.Primary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_view" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_camera"
        android:layout_width="@dimen/dimen_52dp"
        android:layout_height="@dimen/dimen_52dp"
        android:layout_marginStart="@dimen/dimen_24dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:scaleType="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        app:shapeAppearanceOverlay="@style/RoundedImageView"
        app:srcCompat="@drawable/ic_camera_alt_24"
        app:strokeColor="@color/border_color"
        app:strokeWidth="@dimen/dimen_1dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_12dp"
        android:text="@string/camera"
        android:textAppearance="@style/TextBody.Regular.Secondary"
        app:layout_constraintEnd_toEndOf="@+id/iv_camera"
        app:layout_constraintStart_toStartOf="@+id/iv_camera"
        app:layout_constraintTop_toBottomOf="@+id/iv_camera"
        tools:text="Camera" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_gallery"
        android:layout_width="@dimen/dimen_52dp"
        android:layout_height="@dimen/dimen_52dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:layout_marginEnd="@dimen/dimen_24dp"
        android:scaleType="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_camera"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        app:shapeAppearanceOverlay="@style/RoundedImageView"
        app:srcCompat="@drawable/icon_image_24"
        app:strokeColor="@color/border_color"
        app:strokeWidth="@dimen/dimen_1dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_gallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_12dp"
        android:text="@string/gallery"
        android:textAppearance="@style/TextBody.Regular.Secondary"
        app:layout_constraintEnd_toEndOf="@+id/iv_gallery"
        app:layout_constraintStart_toStartOf="@+id/iv_gallery"
        app:layout_constraintTop_toBottomOf="@+id/iv_camera"
        tools:text="Gallery" />

</androidx.constraintlayout.widget.ConstraintLayout>